<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/current"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/menuitem_current"
        android:showAsAction="ifRoom|withText"
    />
    <item
        android:id="@+id/list"
        android:icon="@drawable/ic_menu_database"
        android:title="@string/menuitem_list"
        android:showAsAction="ifRoom|withText"
    />
    <item
        android:id="@+id/help"
        android:icon="@android:drawable/ic_menu_help"
        android:title="@string/menuitem_help"
        android:showAsAction="ifRoom|withText"
    />
    <item
        android:id="@+id/copy"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/menuitem_copy"
        android:showAsAction="ifRoom|withText"
    />
    <item
        android:id="@+id/restore"
        android:icon="@android:drawable/ic_menu_revert"
        android:title="@string/menuitem_restore"
        android:showAsAction="ifRoom|withText"
    />
    <item
            android:id="@+id/options"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/menuitem_options"
            android:showAsAction="ifRoom|withText"
            />
    <item
        android:id="@+id/about"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/menuitem_about"
        android:showAsAction="ifRoom|withText"
    />
    <item
        android:id="@+id/exit"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/menuitem_exit"
        android:showAsAction="ifRoom|withText"
    />
</menu>
