<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detailsview"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <!-- Header -->

        <TextView
            android:id="@+id/labelDetailsHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:text=""
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:drawable/divider_horizontal_dark"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>

        <!-- Period yes/no -->

        <TextView
            android:id="@+id/labelPeriod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/label_details_period"
            android:textSize="18sp"/>

        <RadioGroup
            android:id="@+id/periodOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/periodYes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_details_yes"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/periodNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_details_no"
                android:textSize="18sp" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:drawable/divider_horizontal_dark"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>

        <!-- Period intensity -->

        <TextView
            android:id="@+id/labelPeriodIntensity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/label_details_intensity"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/periodIntensity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/periodIntensity1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_details_intensity1"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/periodIntensity2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_details_intensity2"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/periodIntensity3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_details_intensity3"
                android:textSize="18sp" />
            <RadioButton
                android:id="@+id/periodIntensity4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_details_intensity4"
                android:textSize="18sp"
                android:nextFocusRight="@+id/editNotes"
                android:nextFocusDown="@+id/editNotes"
                />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:drawable/divider_horizontal_dark"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>

        <!-- Notes -->

        <TextView
            android:id="@+id/labelNotes"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/label_details_notes"
            android:textSize="18sp" />
        <!-- Hack to avoid initial focus on edit widget -->
        <LinearLayout
            android:layout_width="0px"
            android:layout_height="0px"
            android:focusable="true"
            android:focusableInTouchMode="true"
            tools:ignore="UselessLeaf" />

        <MultiAutoCompleteTextView
            android:id="@+id/editNotes"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:nextFocusLeft="@+id/periodIntensity4"
            android:nextFocusUp="@+id/periodIntensity4"
            android:text=""
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:drawable/divider_horizontal_dark"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>

        <!-- Events -->

        <TextView
            android:id="@+id/labelEvents"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/label_details_events"
            android:textSize="18sp" />
        <LinearLayout
            android:id="@+id/groupEvents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        </LinearLayout>
    </LinearLayout>
</ScrollView>
